1.4.44: new agents are added